fixed spacing again

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ header video {
     padding-right: 9em;
     padding-left: 9em;
     padding-top: 5em;
-    padding-bottom: 5em;
+    padding-bottom: 10em;
 }
 
 .aboutme h1 {
@@ -119,7 +119,6 @@ header video {
 .aboutme .photo img {
     width: 350px;
     height: auto;
-    padding-bottom: 10em;
 }
 
 .aboutme .nametag {
@@ -365,7 +364,7 @@ header video {
     background-color: #3d3d3d;
     padding-right: 8em;
     padding-left: 8em;
-    padding-top: 15em;
+    padding-top: 14.5em;
     padding-bottom: 11em;
 }
 
